Fix career table layout bug

--- a/src/app/components/career-table/career-table.component.scss
+++ b/src/app/components/career-table/career-table.component.scss
@@ -48,6 +48,7 @@
 
   &__CellPosition {
     padding: 2px 3px;
+    min-width: 23px;
     cursor: pointer;
   }
 
